topic: code enhanced type: flexibility module: commons description: Avoid using JRE internal base64 encoder as it's not accessible in _14 any more.